handled reinsert of keys

--- a/app/src/main/res/layout/activity_simple_dht_main.xml
+++ b/app/src/main/res/layout/activity_simple_dht_main.xml
@@ -40,4 +40,28 @@
         android:maxLines="17"
         android:scrollbars="vertical" />
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/button2"
+        android:text="LDelete" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView1"
+        android:layout_toStartOf="@+id/button3"
+        android:text="GDelete" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:text="Delete Keys" />
+
 </RelativeLayout>
